align fixture center

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,6 +1,3 @@
 .fixture{
   text-align: center;
 }
-div{
-  background-color: blue;
-}
